--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-bootstrap-sweetalert": "^5.1.11",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^9.14.4"
   },
   "scripts": {
     "start": "react-scripts start",
